--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
         "vite": "^6.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.7.2",
+        "@fortawesome/free-brands-svg-icons": "^6.7.2",
+        "@fortawesome/free-regular-svg-icons": "^6.7.2",
+        "@fortawesome/free-solid-svg-icons": "^6.7.2",
+        "@fortawesome/react-fontawesome": "^0.2.2",
         "@inertiajs/react": "^2.0.3",
         "react": "^19.0.0",
         "react-dom": "^19.0.0"
